client/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.body-dark{
  background-color: black;
}

.logo{
  width: 1.5em;
  animation: rotate infinite 3s linear;
  margin-right: 5px;
}

#logo-dark{
  filter: invert(1);
}

.logo:hover {
  animation: rotate infinite 1s linear;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.logo{
  width: 1.5em;
  animation: rotate infinite 3s linear;
  margin-right: 5px;
}

#logo-dark{
  filter: invert(1);
}

.logo:hover {
  animation: rotate infinite 1s linear;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#option-dark{
  color: black;
}

form {
  width: 30%;
  margin: 0 auto;
  display: grid;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

h1{
  font-size: 1.8em;
  text-align: left;
  margin-left: 30px;
  color: black;
}

.body-dark *{
  color: white;
}

.app-wrap{
  display: flex;
  justify-content: center;
  align-items: center;
}

.button-wrap{
  padding: 10px;
  display: flex;
  justify-content: center;
}

button, input[type='submit']{
  color: white;
  background-color: #2ce6df;
  padding: 8px;
  border-radius: 7px;
}

.button-dark, #button-dark, .button-dark-review{
  background-color: maroon;
}

.button-dark-review, .button-review{
  position: relative;
  bottom: 110px;
  left: 210px;
}

.button-container{
  position: absolute;
  top: 30px;
  right: 30px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr;
  grid-column-gap: 20px;
  align-items: center;
}

.collection-controls{
  padding: 5px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  float: center;
  background-color: #587ab0;
  border-style: hidden hidden solid hidden;
  border-color: #46a8b3;
  border-width: 5px;
}

#collection-dark{
  background-color: maroon;
  border-color: rgb(94, 2, 2);
}

.grid {
  display: grid;
  grid-template-columns: repeat(4, 20%);
  grid-template-rows: repeat(4, 20%);
  grid-column-gap: 90px;
  grid-row-gap: 30px;
  padding: 50px;
}

.grid-parent{
  justify-content: start;
}

.collection-grid{
  display: grid;
  grid-template-columns: repeat(4, 20%);
  grid-template-rows: repeat(4, 25%);
  grid-column-gap: 90px;
  grid-row-gap: 50px;
  padding: 50px;
}

nav{
  padding: 30px;
  font-size: large;
  display: flex;
  justify-content:space-evenly;
  float: center;
  background-color: #2ce6df;
  border-style: solid hidden solid hidden;
  border-color: #46a8b3;
  border-width: 5px;
}

.nav-dark{
  background-color: maroon;
  border-color: rgb(94, 2, 2);
}

.flip-card{
  display: flex;
  justify-content: center;
  text-align: center;
  width: 300px;
  height: 590px;
  flex-wrap: wrap;
  transition: 0.3s;
  perspective: 1000px;
}

.flip-card-inner{
  border: 2px solid #e7e7e7;
  border-radius: 4px;
  padding: .5rem;
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

#flip-card-inner-dark{
  box-shadow: 0 4px 8px 0 rgb(255, 255, 255);
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 95%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-card-back {
  transform: rotateY(180deg);
}

button:hover, #card-button-uncollected:hover, #card-button-collected:hover {
  color: navy;
}

#card-button-collected{
  background-color: #db5858;
  height: 50px;
}

#card-button-uncollected{
  background-color: #58db67;
  height: 50px;
}

.movie-page{
  display: grid;
  grid-template-columns: 1fr 1fr 2fr;
  grid-template-rows: 1fr;
}

.review-page{
  margin-left: 50px;
}

#movie-page-card{
  margin-left: 50px;
}

.column{
  margin-left: 50px;
}

.movie-page-title{
  display: flex;
  justify-content: center;
}

.poster {
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  border-radius: 5px;
}

#poster-dark{
  box-shadow: 0 4px 8px 0 rgb(255, 255, 255);
}

.poster:hover {
  box-shadow: 0 15px 22px 0 rgba(0,0,0,0.2);
}

#poster-dark:hover{
  box-shadow: 0 6px 8px 0 rgb(255, 255, 255);
}

#modal, .error {
  border-radius: 10px;
  color: white;

  margin: 1em;
  padding: 1em;

  position: fixed;
  top: 0;
  left: 0;
  right: 0;

  z-index: 1;

  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

#modal {
  background-color: rgb(11, 128, 0);
}

.error{
  background-color: maroon;
}

.hidden{
  visibility: hidden;
}

.dark-mode-label{
  position: relative;
  bottom: 9px;
  right: 10px
}

input[type="checkbox"] {
  -webkit-appearance: none;
  background: #c6c6c6;
  border-radius: 50px;
  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
  transition: 0.5s;
  width: 40px;
  height: 20px;
}

input:checked[type='checkbox']{
  background: #03a9f4;
}

input[type='checkbox']:before{
  content: '';
  position: absolute;
  border-radius: 50px;
  background: #fff;
  top: 15px;
  left: 233px;
  height: 20px;
  width: 20px;
  transform: scale(1.1);
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  transition: 0.5s;
}

input:checked[type='checkbox']:before {
  left: 255px;
}

#favorite-toggle:before{
  top: 219px;
  left: 853px;
}

#favorite-toggle:checked:before{
  left: 873px;
}

